--- a/butterknife-annotations/build.gradle
+++ b/butterknife-annotations/build.gradle
@@ -21,3 +21,5 @@ dependencies {
   compileOnly deps.android
   compile deps.supportAnnotations
 }
+
+apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
