--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,6 @@
 include ':butterknife'
 include ':butterknife-annotations'
 include ':butterknife-compiler'
+include ':app'
 
-include ':sample:app'
-
-rootProject.name = 'butterknife-parent'
+rootProject.name = 'NewButterKnife'
